RESOLVED FIXED218649
Encoding PutImageData should not serialize separate IPC attachments for the image data
https://bugs.webkit.org/show_bug.cgi?id=218649
Summary Encoding PutImageData should not serialize separate IPC attachments for the i...
Wenson Hsieh
Reported 2020-11-05 22:17:41 PST
SSIA.
Attachments
Patch (3.71 KB, patch)
2020-11-05 23:00 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-11-05 23:00:34 PST
EWS
Comment 2 2020-11-06 11:29:55 PST
Committed r269526: <https://trac.webkit.org/changeset/269526> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413407 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-06 11:31:41 PST
Note You need to log in before you can comment on or make changes to this bug.